<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
<FrameLayout 
        android:id="@+id/setting" 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone">
            <LinearLayout android:gravity="center" android:id="@+id/right_menu" android:layout_width="91.0dip" android:layout_height="fill_parent">
                <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/right_page" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="14.0sp"  android:gravity="center" android:id="@+id/menu_net_udpate"  android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/menu_net_update"   android:drawablePadding="5.0dip" />
                        <TextView android:textSize="14.0sp"  android:gravity="center" android:id="@+id/menu_recommand_friend"  android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="8.0dip" android:text="@string/menu_recommand_friend"   android:drawablePadding="5.0dip" />
                        <TextView android:textSize="14.0sp"  android:gravity="center" android:id="@+id/menu_submit_proposal" android:background="@drawable/selector_menu_btn" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="8.0dip" android:text="@string/menu_submit_proposal"  android:drawablePadding="5.0dip" />
                        <TextView android:textSize="14.0sp"  android:gravity="center" android:id="@+id/menu_help_information" android:background="@drawable/selector_menu_btn" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="8.0dip" android:text="@string/menu_help_information"   android:drawablePadding="5.0dip" />
                        <TextView android:textSize="14.0sp"  android:gravity="center" android:id="@+id/main_about" android:background="@drawable/selector_menu_btn" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="8.0dip" android:text="@string/menu_about"  android:drawablePadding="5.0dip" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </FrameLayout>     
<FrameLayout
        android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/rootblock_default_bg"
    android:orientation="horizontal"
    android:paddingBottom="30dp"
    android:paddingTop="30dp" >

    <LinearLayout
        android:layout_width="20dp"
        android:layout_height="fill_parent"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp" />

    <LinearLayout
        android:id="@+id/pagerLinear"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        
        android:orientation="vertical" >

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPagerContent"
            android:layout_gravity="left"
            android:layout_marginLeft="40dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingRight="5dp" >
 			<LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/setting_btn"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/rootblock_icon_download_bg" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/download_btn"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/rootblock_icon_download_bg" />

                <ImageView
                    android:id="@+id/download_btn"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/rootblock_icon_clear_bg" />

                <ImageView
                    android:id="@+id/download_btn"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/rootblock_icon_set_bg" />

                <ImageView
                    android:id="@+id/download_btn"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/rootblock_icon_add_bg" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
  

        
</LinearLayout>